--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           } 
         
           else {
-            fetch("https://detect.roboflow.com/bird-v2/2?api_key=Q1XxRSAsa7zJHnNtqJPs&confidence=80", {
+            fetch("https://detect.roboflow.com/bird-identification-v2/1?api_key=Q1XxRSAsa7zJHnNtqJPs&confidence=80", {
               method: "POST",
               body: image,
             })
